// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generation-and-usage create api specific usage for action import 1`] = `
"import { dummyActionImport, dummyParamType } from './generated/undefined/action-imports';

const parameter: dummyParamType = { dummyParam1: 'dummyParam1' };
    
const resultPromise = dummyActionImport(parameter).execute({ destinationName: 'myDestinationName' });"
`;

exports[`generation-and-usage create api specific usage for function import 1`] = `
"import { dummyFunc, dummyParamType } from './generated/undefined/function-imports';

const parameter: dummyParamType = { dummyParam1: 'dummyParam1', dummyParam2: 'dummyParam2', ... };
    
const resultPromise = dummyFunc(parameter).execute({ destinationName: 'myDestinationName' });"
`;

exports[`generation-and-usage create api specific usage for function import with minimum parameters 1`] = `
"import { dummyFunc, dummyParamType } from './generated/undefined/function-imports';

const parameter: dummyParamType = { dummyParam1: 'dummyParam1' };
    
const resultPromise = dummyFunc(parameter).execute({ destinationName: 'myDestinationName' });"
`;

exports[`generation-and-usage creates api specific usage for entity 1`] = `
"import { dummyService } from './generated/dummy-service';

const { dummyClassApi } = dummyService();
const resultPromise = dummyClassApi.requestBuilder().getAll().top(5).execute({ destinationName: 'myDestinationName' });
"
`;
